# Sequitur

./: .gitignore  4.2.0  README.md  analysis.json  cover_letter.odt  reads.txt  reads_.txt  results.csv  results.ipynb  results3.json  save.txt  sequitur.ipynb  sequitur_algorithm.txt  sequitur_bm.ipynb  sequitur_bmam.ipynb  sequitur_context_aware_dbg v1.ipynb  sequitur_context_aware_dbg v2.ipynb  sequitur_context_aware_dbg_v3.ipynb  sequitur_context_aware_dbg_v5.ipynb  sequitur_context_aware_dbg_v6.ipynb  sequitur_pseudocode.txt  sequitur_simplified.ipynb  sequitur_v2.ipynb  sequitur_v3.ipynb  test.ipynb
.archive/: results3.json  sequitur.ipynb  sequitur_context_aware_dbg_v1.ipynb  sequitur_context_aware_dbg_v2.ipynb  sequitur_context_aware_dbg_v3.ipynb  sequitur_context_aware_dbg_v4.ipynb  sequitur_context_aware_dbg_v5.ipynb  sequitur_context_aware_dbg_v6.ipynb  sequitur_v3.ipynb
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.gihub/copilot/: todo.json
.github/: copilot-instructions.md
data/: Bacterial training dataset for Galaxy training network tutorials on Genome assembly Zenodo.URL
data/input/: Raphanus sativus_NC_018551.1.fasta
data/output/: generated_sequence_seed_1_sequitur.csv  generated_sequence_seed_2_euler.csv  (+12 more)
docs/: ALTERNATIVE_PATHS.md  PARAMETER_SELECTION.md  QUALITY.md  README.md  READ_INDEX.md  RUST_ARCHITECTURE.md
euler/: SHE_sells_s.md  _on.md  _se.md  _sh.md  _th.md  a_s.md  e_s.md  ea_.md  ell.md  he_.md  hor.md  lls.md  ls_.md  n_t.md  on_.md  s_o.md  s_s.md  sea.md  sel.md  sho.md  the.md
python/: README.md  requirements.txt  sequitur.ipynb  sequitur.py
results/: python_assembled.fasta  reverse_complement_rust.fasta  with_errors_py.fasta  with_errors_rust.fasta
rust/: Cargo.toml  PyO3.md  README.md
rust/benches/: assignment_bench.rs  overlap_benchmark.rs  sequitur_benchmark.rs
rust/src/: affix.rs  alternative_paths.rs  lib.rs  main.rs  matching.rs  overlap.rs  python_bindings.rs  read_source.rs  sparse_jv.rs  suffix.rs
rust/src/affix/: affix_trie.rs  mod.rs
rust/tests/: quality_integration.rs  sparse_vs_dense.rs
scripts/: analyse_alternatives.py  misc.txt  recall_reads.py  test.py  test2.py
singularity/: README.md  sequitur.def
tests/: README.md  datasets.yaml
(+350 files in other folders)
