[package]
name = "sequitur_rs"
version = "0.1.0"
edition = "2021"
authors = ["Sequitur Project"]
description = "Memory-efficient core of the Sequitur assembler (prototype)."
publish = false

[dependencies]
clap = { version = "4.1", features = ["derive"] }
rayon = "1.7"
bio = "3"
strsim = "0.11"
sprs = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
anyhow = "1"
tempfile = "3"
flate2 = "1"
lapjv = "0.3.0"
ndarray = "0.16"
num_cpus = "1.13"

[lib]
name = "sequitur_rs"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.18"
features = ["extension-module", "auto-initialize"]

[features]
default = ["parallel"]
parallel = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "overlap_benchmark"
harness = false

[[bench]]
name = "sequitur_benchmark"
harness = false
